[gd_scene load_steps=8 format=3 uid="uid://bf1s3l40wbjjl"]

[ext_resource type="Script" path="res://entities/enemy_turrets/enemy_laser.gd" id="1_f6uyk"]
[ext_resource type="Texture2D" uid="uid://cb1bt076t1a6x" path="res://SPRITES/New_enemy_sprites/Project Enemy/ProjectBody1.png" id="2_uum00"]
[ext_resource type="Texture2D" uid="uid://bbhappx64oiwm" path="res://SPRITES/New_enemy_sprites/Project Enemy/ProjectEye1.png" id="3_v3k75"]
[ext_resource type="Texture2D" uid="uid://ceybokm7ndon3" path="res://SPRITES/New_enemy_sprites/Project Enemy/Enemy_ProjectEnemy_Attack_64x64.png" id="4_u4bae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ag5nj"]
size = Vector2(50, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkdyh"]
size = Vector2(658, 638)

[sub_resource type="LabelSettings" id="LabelSettings_aqcy7"]
font_size = 13

[node name="enemy_laser" type="CharacterBody2D"]
position = Vector2(0, 1)
collision_layer = 4
script = ExtResource("1_f6uyk")
max_hp = 4

[node name="sprite_body" type="Sprite2D" parent="."]
texture = ExtResource("2_uum00")

[node name="Marker2D" type="Marker2D" parent="sprite_body"]

[node name="iris" type="Sprite2D" parent="sprite_body/Marker2D"]
texture = ExtResource("3_v3k75")

[node name="hostile" type="Sprite2D" parent="sprite_body"]
visible = false
texture = ExtResource("4_u4bae")

[node name="laser_container" type="Node2D" parent="."]
z_index = -1
position = Vector2(0, -1)

[node name="Marker2D_down" type="Marker2D" parent="laser_container"]
position = Vector2(-1, -1)

[node name="Marker2D_up" type="Marker2D" parent="laser_container"]
position = Vector2(-1, -24)

[node name="Marker2D_left" type="Marker2D" parent="laser_container"]
position = Vector2(-23, -12)

[node name="Marker2D_right" type="Marker2D" parent="laser_container"]
position = Vector2(23, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_ag5nj")

[node name="Area2D_PlayerNearby" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_PlayerNearby"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_bkdyh")
debug_color = Color(0.392157, 0.886275, 1, 0.0901961)

[node name="Label_HP" type="Label" parent="."]
offset_left = -18.0
offset_top = 18.0
offset_right = 25.0
offset_bottom = 44.0
text = "40/40"
label_settings = SubResource("LabelSettings_aqcy7")

[connection signal="body_entered" from="Area2D_PlayerNearby" to="." method="_on_area_2d_player_nearby_body_entered"]
[connection signal="body_exited" from="Area2D_PlayerNearby" to="." method="_on_area_2d_player_nearby_body_exited"]
